--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,14 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    sourceSets {
+        main {
+            resources {
+                srcDirs = ['src/main']
+                include 'fonts/**/*.ttf'
+            }
+        }
+    }
 }
 
 dependencies {
